--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
@@ -34,13 +35,14 @@
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
+    "ts-loader": "^9.4.2",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
-    "tsconfig-paths-webpack-plugin": "^4.0.0",
-    "ts-loader": "^9.4.2",
-    "@babel/polyfill": "^7.12.1"
+    "webpack-dev-server": "^4.11.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "sass": "^1.58.3"
+  }
 }
